[metadata]
name = qiskit-csiro
version = 0.1.0
author = Abhay Sharma
author_email = abhaysharma.iisc.9@gmail.com
classifiers =
    Environment :: Console
    Programming Language :: Python :: 3.9.7 :: Only
license = GPLv3
license_files = LICENSE
description = Qiskit project with subgraph-isomorphism dependency
long_description = file: README.md

[options]
packages = find:
install_requires =
    numpy==1.22.4
    matplotlib==3.5.3
    networkx
package_dir=
    =src

[options.packages.find]
where=.

[options.entry_points]
console_scripts =
    qiskit-csiro = qiskit_csiro:main  # replace main with actual CLI function

[options.extras_require]
docs = sphinx>=5.0; sphinx-rtd-theme>=1.0.0

[options.package_data]
subgraph-isomorphism = *.yml, templates/*.*, templates/**/*.*, resources/*.*, resources/**/*.*, test/*.yml, examples/*.yml
