[metadata]
name = qiskit-csiro
version = 0.1.0
author = Abhay Sharma
author_email = abhaysharma.iisc.9@gmail.com
description = Qiskit project with subgraph-isomorphism dependency
long_description = file: README.md
long_description_content_type = underdevelopement
license = GPLv3
license_files = LICENSE
classifiers =
    Environment :: Console
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages = find:
python_requires = ==3.9.7
install_requires =
    numpy==1.22.4
    matplotlib==3.5.3
    networkx

[options.packages.find]
where = .
